<resources>
    <!--  Dashboard  -->
    <string name="app_name">Balance Currency</string>
    <string name="dashboad_statistic_card_middle_text">Potrzebujesz</string>
    <string name="dashboard_statistic_card_left_text">Cele</string>
    <string name="dashboard_statistic_card_right_text">Zrealizowane</string>
    <string name="dashboard_statistic_card_bar_left_text">Dzień</string>
    <string name="dashboard_statistic_card_bar_middle_text">Tydzień</string>
    <string name="dashboard_statistic_card_bar_right_text">Miesiąc</string>
    <string name="fragment_dashboard_popular_categories">Popularne kategorie</string>
    <string name="fragment_dashboard_current_currency">Obecne kursy walut</string>
    <string name="fragment_dashboard_list_info_pln">1 PLN to</string>

    <!--  Name of currencies  -->
    <string-array name="cuurency_names">
        <item>Dolar kanadyjski</item>
        <item>Frank szwajcarski</item>
        <item>Korona Czeska</item>
        <item>Korona Duńska</item>
        <item>Euro</item>
        <item>Brytyjski funt szterling</item>
        <item>Jen</item>
        <item>Won</item>
        <item>Peso Meksykańskie</item>
        <item>Lej</item>
        <item>Rubel rosyjski</item>
        <item>Dolar Amerykański</item>
    </string-array>

    <!--  Currency abbreviations  -->
    <string-array name="currency_codes">
        <item>\u0020CAD</item>
        <item>\u0020CHF</item>
        <item>\u0020CZK</item>
        <item>\u0020DKK</item>
        <item>\u0020EUR</item>
        <item>\u0020GBP</item>
        <item>\u0020JPY</item>
        <item>\u0020KRW</item>
        <item>\u0020MXN</item>
        <item>\u0020RON</item>
        <item>\u0020RUB</item>
        <item>\u0020USD</item>
    </string-array>

    <!--  AddNewGoalDialog  -->
    <string name="done">Gotowe!</string>
    <string name="next">Dalej</string>
    <string name="open_calendar">Otwórz kalendarz</string>
    <string name="calendar_step_descriprion">Wybierz przewidywaną datę zakończenia celu</string>
    <string name="add_goal_description">Dodajesz nowy cel</string>
    <string name="set_goal_name">Nazwij swój cel</string>
    <string name="name_of_goal">Nazwa celu</string>
    <string name="set_goal_interval">Co jaki czas chcesz odkładać na swój cel?</string>
    <string name="every_day">Codziennie</string>
    <string name="every_week">Co tydzień</string>
    <string name="every_month">Co miesiąc</string>
    <string name="interval_amount">Wpłata</string>
    <string name="set_interval_amount">Jaką kwotę chcesz wpłacać?</string>
    <string name="what_amount">Jaką kwotę potrzebujesz?</string>
    <string name="amount">Kwota</string>
    <string name="pln">PLN</string>

    <!--  CardsFragment  -->
    <string name="title_transport">Transport</string>
    <string name="title_home">Dom</string>
    <string name="title_travel">Podróże</string>
    <string name="title_electronic">Elektronika</string>
    <string name="title_hobby">Hobby</string>
    <string name="title_gifts">Prezenty</string>
    <string name="goal_cards">Karty celów</string>
    <string name="add_goal">Dodaj nowy cel</string>
    <string name="history">Historia</string>
    <string name="order_by">Sortuj wg:</string>
    <string name="order_date">Daty</string>
    <string name="dialog_hint_desc">Znajdziesz tutaj cele, które możesz dodać klikając przycisk \'Dodaj nowy cel\'. Zdefiniowane cele możesz śledzić w pięciu podstawowych kategoriach. Ustalenie kwoty regularnej wpłaty pozwoli na wyświetlenie statystyk w panelu głównym aplikacji.</string>

    <string name="empty" />

    <!-- Goal card -->
    <string name="card_info_interval_day">Codziennie po</string>
    <string name="card_info_interval_week">Co tydzień po</string>
    <string name="card_info_interval_month">Co miesiąc po</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="done_date">Zrelizowano:\u0020</string>

    <!-- Edit goal dialog -->
    <string name="dialog_edit_goal__title">Edytujesz cel</string>
    <string name="actual_balance">Aktualny stan celu:\u0020</string>
    <string name="slash">/</string>
    <string name="space_pln">\u0020PLN</string>
    <string name="plus">+\u0020</string>

</resources>