<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="uiState"
            type="AddGoalState" />

        <variable
            name="viewModel"
            type="com.colderz.project_bacu_app.presentation.ui.cards_screen.dialogs.AddNewGoalViewModel" />

        <variable
            name="intervalChoice"
            type="Integer" />

        <import type="com.colderz.project_bacu_app.presentation.ui.cards_screen.dialogs.AddNewGoalDialogFragment.AddGoalState" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:id="@+id/add_goal_dialog__interval_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="@{uiState == AddGoalState.SET_INTERVAL ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/fragment_card__done"
        app:layout_constraintTop_toBottomOf="@+id/custom_progress_indicator">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center"
            android:text="@string/set_goal_interval"
            android:textColor="#2E5A59"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp">

            <FrameLayout
                android:id="@+id/dialog_add_goal_button_day"
                touchListener="@{false}"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/rounded_orange_button"
                android:backgroundTint="@{intervalChoice == 1 ? @color/color_orange_main : @android:color/white}"
                android:clickable="true"
                android:elevation="7dp"
                android:focusable="true"
                android:onClick="@{() -> viewModel.setIntervalButton(1)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dialog_add_goal_button_week"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/every_day"
                    android:textColor="@{intervalChoice == 1 ? @android:color/white : @color/main_color_text}"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/dialog_add_goal_button_week"
                touchListener="@{false}"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:background="@drawable/rounded_orange_button"
                android:backgroundTint="@{intervalChoice == 2 ? @color/color_orange_main : @android:color/white}"
                android:clickable="true"
                android:elevation="7dp"
                android:focusable="true"
                android:onClick="@{() -> viewModel.setIntervalButton(2)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/every_week"
                    android:textColor="@{intervalChoice == 2 ? @android:color/white : @color/main_color_text}"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/dialog_add_goal_button_month"
                touchListener="@{false}"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:background="@drawable/rounded_orange_button"
                android:backgroundTint="@{intervalChoice == 3 ? @color/color_orange_main : @android:color/white}"
                android:clickable="true"
                android:elevation="7dp"
                android:focusable="true"
                android:onClick="@{() -> viewModel.setIntervalButton(3)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dialog_add_goal_button_week"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/evert_month"
                    android:textColor="@{intervalChoice == 3 ? @android:color/white : @color/main_color_text}"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>