<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.colderz.project_bacu_app.presentation.ui.dashboard_screen.DashboardViewModel" />

        <variable
            name="state"
            type="State" />

        <import type="com.colderz.project_bacu_app.presentation.ui.custom_views.DashboardStatisticCard.State" />

        <import type="android.view.View" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        app:cardBackgroundColor="@color/card_background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="4dp"
                        android:text="1400 zł"
                        android:textColor="#204F4E"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/dashboad_statistic_card_middle_text"
                        android:textColor="#7F8A8A"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="4dp"
                        android:text="8"
                        android:textColor="#204F4E"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/dashboard_statistic_card_left_text"
                        android:textColor="#7F8A8A"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="4dp"
                        android:text="1"
                        android:textColor="#204F4E"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/dashboard_statistic_card_right_text"
                        android:textColor="#7F8A8A"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:translationZ="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="315dp"
                    android:layout_height="37dp"
                    android:background="@drawable/rounded_bar_background"
                    android:elevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_view_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="7dp"
                        android:text="@string/dashboard_statistic_card_bar_left_text"
                        android:textColor="#204F4E"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="7dp"
                        android:text="@string/dashboard_statistic_card_bar_middle_text"
                        android:textColor="#204F4E"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="7dp"
                        android:text="@string/dashboard_statistic_card_bar_right_text"
                        android:textColor="#204F4E"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    touchListener="@{true}"
                    android:layout_width="122dp"
                    android:layout_height="43dp"
                    android:background="@drawable/rounded_orange_button"
                    android:elevation="2dp"
                    android:translationZ="3dp"
                    android:visibility="@{state == State.SECOND ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dashboard_statistic_card_bar_middle_text"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    touchListener="@{true}"
                    android:layout_width="122dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_orange_button"
                    android:elevation="2dp"
                    android:translationZ="3dp"
                    android:visibility="@{state == State.FIRST ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dashboard_statistic_card_bar_left_text"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    touchListener="@{true}"
                    android:layout_width="122dp"
                    android:layout_height="43dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_orange_button"
                    android:elevation="2dp"
                    android:translationZ="3dp"
                    android:visibility="@{state == State.THIRD ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dashboard_statistic_card_bar_right_text"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>